package com.youkeda.application.art.member.model;

/**
 * 性别模型
 */
public enum Gender {
    /**
     * 男性
     */
    male,
    /**
     * 女性
     */
    female,
    /**
     * 未知
     */
    unknow

}
